--- a/site/css/main.css
+++ b/site/css/main.css
@@ -1,1 +1,1 @@
-body,html{margin:0}._container{margin:.5rem}body,html{font-family:sans-serif}body,html{background-color:#222}._sans{font-family:sans-serif}
+body,html{margin:0}._container{margin:.5rem}body,html{font-family:Arial,sans-serif}body,html{background-color:#222}._sans{font-family:Arial,sans-serif}
