--- a/src/scss/core_1/main.scss
+++ b/src/scss/core_1/main.scss
@@ -3,7 +3,7 @@
 // ---------------------------------------------------------------
 
 // fonts
-$sans: sans-serif;
+$sans: Arial,sans-serif;
 $baseFont: $sans;
 
 // colors
