--- a/src/pug/index/index.html.pug
+++ b/src/pug/index/index.html.pug
@@ -1,31 +1,9 @@
-block vars
-  -
-    title = 'BareCSS';
+extends ../core/_html
+include ../core/_logo
 
-mixin logo(s1='Bare', s2='CSS')
-  style.
-    #logo {
-      font-weight: 600;
-      margin: .5rem .25rem;
-      padding: .25rem .5rem;
-      display: inline-block;
-      cursor: pointer;
-      border-radius:.3rem;
-    }
-    #logo .s1 { color:#fff }
-    #logo .s2 { color:#6481ff }
-    #logo:hover { background-color:#8883 }
-  //- style.
-  #logo|#[span.s1!=s1]#[span.s2!=s2]
+block header
+  header: a(style="cursor:default"): +logo
 
-block document
-  doctype html
-  html
-    head
-      title !{title}
-      meta#_color_scheme(name="color-scheme" content="light dark")
-      link#_style(rel="stylesheet" media='all' href="css/main.css")
-    body
-      header: div: +logo
-      main: article._container
-        |hi, there
+block article
+  article._container
+    a(href='basics') basics
