--- a/site/css/main.css
+++ b/site/css/main.css
@@ -1,1 +1,1 @@
-body,html{margin:0}._container{margin:.5rem}body,html{font-family:Arial,sans-serif}body,html{background-color:#222}._sans{font-family:Arial,sans-serif}
+body,html{margin:0}._container{margin:.5rem}body,html{font-family:Arial,sans-serif}hr{height:1px;border:1px solid rgba(136,136,136,.2666666667)}body,html{background-color:#ddd;color:#222}hr{border-top-color:#aaa;border-bottom-color:#fff}html._dark,html._dark body{background-color:#222;color:#ddd}html._dark hr{border-top-color:#000;border-bottom-color:#444}._sans{font-family:Arial,sans-serif}
