--- a/src/pug/core/_vars.pug
+++ b/src/pug/core/_vars.pug
@@ -1,3 +1,8 @@
 -
-  title = 'BareCSS'
+  name = "BareCSS"
+  description = 'Minimal CSS framework for a clean layout.'
+  version = '0.1.0.(alpha)'
+  author = 'Techie Joe'
+  year   = '2025'
+
   homeUri = '/BareCSS/site'
