--- a/src/scss/core_1/main.scss
+++ b/src/scss/core_1/main.scss
@@ -31,16 +31,19 @@ html,body { margin:0 }
 // ---------------------------------------------------------------
 
 html,body { font-family: $baseFont; }
-hr { height:1px;border:1px solid #8884; }
+hr { height:.05rem;border:1px solid #8884; }
+blockquote { background-color: #8882; padding: 2em; margin: 1em; }
 
 // ---------------------------------------------------------------
 // theme color
 // ---------------------------------------------------------------
 
+footer ._container,
 html,body { background-color: $baseBg; color: $baseFg; }
 hr { border-top-color: #AAA;border-bottom-color:#FFF }
 
 html._dark {
+  footer ._container,
   &,body { background-color: $dark_baseBg; color: $dark_baseFg; }
   hr { border-top-color: #000;border-bottom-color:#444 }
 }
@@ -49,8 +52,14 @@ html._dark {
 // custom
 // ---------------------------------------------------------------
 
+footer {
+  & { position:absolute;bottom:0;left:0;right:0 }
+  ._container { margin:0;padding:.5rem }
+}
+
 // ---------------------------------------------------------------
 // helpers
 // ---------------------------------------------------------------
 
 ._sans { font-family: $sans }
+._m0 { margin:0 !important }
