--- a/src/pug/core/_html.pug
+++ b/src/pug/core/_html.pug
@@ -39,6 +39,8 @@ block document
         
         block footer
           footer
+            hr._m0
+            ._container: small| Copyright (c) !{year} !{author}. All rights reserved.
 
         block widget
           aside
