--- a/src/pug/core/_vars.pug
+++ b/src/pug/core/_vars.pug
@@ -6,4 +6,7 @@
   author = 'Techie Joe'
   year   = '2025'
 
-  homeUri = '/BareCSS/site'
+  homeUri = '/BareCSS/site/'
+
+  colorScheme = 'light dark'
+  themeColor  = '#222'
