--- a/src/pug/index/index.html.pug
+++ b/src/pug/index/index.html.pug
@@ -2,6 +2,7 @@ extends ../core/_html
 include ../core/_logo
 
 block append vars
+  - pageid = 'index'
   - title = name
 
 block append style
@@ -15,12 +16,10 @@ block header
   hr
 
 block article
-  nav._container
-    | Home 
-    a(href='basics') Basics
+  nav._container: +main_nav
   hr
   article._container
-    pre
+    pre._scrollable
       .
         Vision  : !{vision}
 
