--- a/src/scss/core_1/main.scss
+++ b/src/scss/core_1/main.scss
@@ -62,4 +62,7 @@ footer {
 // ---------------------------------------------------------------
 
 ._sans { font-family: $sans }
+
+._scrollable { overflow:auto }
+
 ._m0 { margin:0 !important }
