--- a/src/pug/core/_logo.pug
+++ b/src/pug/core/_logo.pug
@@ -2,6 +2,7 @@ block append style
   style.
     #logo {
       font-weight: 600;
+      margin: .25rem 0;
       padding: .25rem .5rem;
       display: inline-block;
       cursor: default;
@@ -13,7 +14,12 @@ block append style
     a #logo { cursor:pointer }
     a #logo:hover { background-color:#8883 }
     a #logo:active { opacity:.3 }
-    .maindesc { margin:0 .5rem;font-size:.9em }
+    .maindesc {
+      margin:0 .5rem;
+      font-size: 0.9em;
+      line-height: 1.25;
+      vertical-align: text-top;
+    }
   //- style.
 
 mixin logo(s1,s2)
