--- a/src/pug/core/_html.pug
+++ b/src/pug/core/_html.pug
@@ -40,7 +40,7 @@ block document
         block footer
           footer
             hr._m0
-            ._container: small| Copyright (c) !{year} !{author}. All rights reserved.
+            ._container: small| &copy; !{year} !{author}. All rights reserved.
 
         block widget
           aside
