--- a/src/pug/core/_logo.pug
+++ b/src/pug/core/_logo.pug
@@ -3,6 +3,7 @@ block append style
     #logo {
       font-weight: 600;
       margin: .25rem 0;
+      margin-left: -.5rem;
       padding: .25rem .5rem;
       display: inline-block;
       cursor: default;
