--- a/src/pug/core/_logo.pug
+++ b/src/pug/core/_logo.pug
@@ -2,8 +2,8 @@ block append style
   style.
     #logo {
       font-weight: 600;
-      margin: .25rem 0;
       margin-left: -.5rem;
+      margin-right: .25rem;
       padding: .25rem .5rem;
       display: inline-block;
       cursor: default;
@@ -16,7 +16,6 @@ block append style
     a #logo:hover { background-color:#8883 }
     a #logo:active { opacity:.3 }
     .maindesc {
-      margin:0 .5rem;
       font-size: 0.9em;
       line-height: 1.25;
       vertical-align: text-top;
