--- a/src/pug/core/_vars.pug
+++ b/src/pug/core/_vars.pug
@@ -6,7 +6,7 @@
   author = 'Techie Joe'
   year   = '2025'
 
-  homeUri = '/BareCSS/site/'
+  homeUri = '/barecss/site/'
 
   colorScheme = 'light dark'
   themeColor  = '#222'
