--- a/src/pug/basics/basics/index.html.pug
+++ b/src/pug/basics/basics/index.html.pug
@@ -7,7 +7,7 @@ block append vars
 
 block header
   header._container
-    a(href=homeUri): +logo
+    +logo
     span.maindesc= description
   hr
 
