--- a/src/pug/core/_html.pug
+++ b/src/pug/core/_html.pug
@@ -46,7 +46,7 @@ block document
           aside
         
         block script
-          script(src=homeUri+"js/thm.js")
+          script(src=homeUri+"js/theme_v1.0.js")
           script.
             console.log('hi, there');
           //- script.
