--- a/src/pug/index/index.html.pug
+++ b/src/pug/index/index.html.pug
@@ -27,5 +27,5 @@ block article
         Year    : !{year}
         Version : !{version}
 
-        LICENSE : MIT
+        LICENSE : !{license}
       //- 
