--- a/src/pug/index/test.html.pug
+++ b/src/pug/index/test.html.pug
@@ -13,7 +13,7 @@ block append style
 block header
   header._container
     +logo
-    span.maindesc= description
+    span.maindesc| | Lab
   hr
 
 block article
@@ -21,7 +21,7 @@ block article
   hr
   article._container
     details
-      summary Summary
+      summary._no_select Summary
       div._content._scrollable
         ._container: pre.
           // details
