--- a/src/pug/core/_vars.pug
+++ b/src/pug/core/_vars.pug
@@ -1,10 +1,11 @@
 -
   name = "BareCSS"
   description = 'Minimal framework for a clean layout.'
-  vision = 'To create the best collection of short ways to get a clean layout.'
+  vision  = 'To create the best collection of short ways to get a clean layout.'
   version = '0.1.0.(alpha)'
-  author = 'Techie Joe'
-  year   = '2025'
+  author  = 'Techie Joe'
+  year    = '2025'
+  license = 'MIT'
 
   homeUri = '/barecss/site/'
 
