--- a/src/pug/core/_vars.pug
+++ b/src/pug/core/_vars.pug
@@ -1,7 +1,7 @@
 -
   name = "BareCSS"
   description = 'Minimal framework for a clean layout.'
-  vision  = 'To create the best collection of short ways to get a clean layout.'
+  vision  = 'To create the best collection of a clean layout.'
   version = '0.1.0.(alpha)'
   author  = 'Techie Joe'
   year    = '2025'
