--- a/src/pug/basics/basics/index.html.pug
+++ b/src/pug/basics/basics/index.html.pug
@@ -3,7 +3,8 @@ include ../../core/_logo
 
 block append vars
   - pageid = 'basics'
-  - title = name
+  - title = `Basics | ${name}`
+  - description = 'Common layouts & features.'
 
 block header
   header._container
