--- a/src/pug/index/test.html.pug
+++ b/src/pug/index/test.html.pug
@@ -13,7 +13,7 @@ block append style
 block header
   header._container
     +logo
-    span.maindesc| | Lab
+    span.maindesc| Lab
   hr
 
 block article
@@ -29,6 +29,7 @@ block article
   hr
   article._container
     pre._scrollable
-      .
+      //- .
         // test
       //- 
+      +pageData
