--- a/src/pug/core/_logo.pug
+++ b/src/pug/core/_logo.pug
@@ -10,8 +10,9 @@ block append style
       border-radius: .3rem;
     }
     #logo .s1 { color:#000 }
-    #logo .s2 { color:#6481ff }
+    #logo .s2 { color:#1b36b0 }
     ._dark #logo .s1 { color:#fff }
+    ._dark #logo .s2 { color:#7a8eea }
     a #logo { cursor:pointer }
     a #logo:hover { background-color:#8883 }
     a #logo:active { opacity:.3 }
